{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 361,
  "lineage": "4a078638-1215-dcab-a8e9-c92722d3abea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-004bd4ea8e2537817",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004bd4ea8e2537817",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0db70ec4f812dc9cb",
            "private_dns": "ip-10-0-1-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-100-26-52-220.compute-1.amazonaws.com",
            "public_ip": "100.26.52.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ffb40b5dbadc905b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001796c1d2996166e",
            "tags": {
              "Name": "ansible-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "ansible-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01001bd48ad5f825a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.ansible-sg",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "databases-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-0339a665d3732b464",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0339a665d3732b464",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059a3c1d11365f025",
            "private_dns": "ip-10-0-4-193.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.193",
            "public_dns": "ec2-34-236-153-151.compute-1.amazonaws.com",
            "public_ip": "34.236.153.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be699be4279d81cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023593f2a5ebec035",
            "tags": {
              "Name": "databases-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "databases-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062a75fe268ad1eeb"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.databases-sg",
            "aws_subnet.ecommerce-project-priv-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "front-app-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-0bc54caf619d66949",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc54caf619d66949",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07422f495a6c5e844",
            "private_dns": "ip-10-0-1-151.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.151",
            "public_dns": "ec2-54-89-171-193.compute-1.amazonaws.com",
            "public_ip": "54.89.171.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f2f551857050d829",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-001796c1d2996166e",
            "tags": {
              "Name": "front-app-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "front-app-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c1372afefa42f00"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.front-app-sg",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grafana-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0149b2da6ceec4bb0",
            "arn": "arn:aws:ec2:us-east-1:741692307640:instance/i-09d32346b6230045b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d32346b6230045b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ecommerce-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0354b7adeddece62f",
            "private_dns": "ip-10-0-2-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.219",
            "public_dns": "ec2-54-91-243-198.compute-1.amazonaws.com",
            "public_ip": "54.91.243.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dc4196159052e94f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0fb01a90ccfca2e",
            "tags": {
              "Name": "grafana-project",
              "Project": "ecommerce-project"
            },
            "tags_all": {
              "Name": "grafana-project",
              "Project": "ecommerce-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070d9b7ce02907d4e"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.grafana-sg",
            "aws_subnet.ecommerce-project-pub-2",
            "aws_vpc.ecommerce-project",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecommerce-project-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:internet-gateway/igw-0301a5691ec07a864",
            "id": "igw-0301a5691ec07a864",
            "owner_id": "741692307640",
            "tags": {
              "Name": "ecommerce-project-IGW"
            },
            "tags_all": {
              "Name": "ecommerce-project-IGW"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecommerce-project-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:route-table/rtb-04e137790b28bf9c2",
            "id": "rtb-04e137790b28bf9c2",
            "owner_id": "741692307640",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0301a5691ec07a864",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecommerce-project-pub-RT"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eb23499dfb1598d",
            "route_table_id": "rtb-04e137790b28bf9c2",
            "subnet_id": "subnet-001796c1d2996166e"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-1",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b89682c60f72be2",
            "route_table_id": "rtb-04e137790b28bf9c2",
            "subnet_id": "subnet-0e0fb01a90ccfca2e"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-2",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecommerce-project-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b6fa7c80660d211",
            "route_table_id": "rtb-04e137790b28bf9c2",
            "subnet_id": "subnet-0389d48095e65cba2"
          },
          "dependencies": [
            "aws_internet_gateway.ecommerce-project-IGW",
            "aws_route_table.ecommerce-project-pub-RT",
            "aws_subnet.ecommerce-project-pub-3",
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-01001bd48ad5f825a",
            "description": "Group for ansible",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01001bd48ad5f825a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-sg"
            },
            "tags_all": {
              "Name": "ansible-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "databases-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-062a75fe268ad1eeb",
            "description": "Group for databases",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062a75fe268ad1eeb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "databases-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "databases-sg"
            },
            "tags_all": {
              "Name": "databases-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-05c1372afefa42f00",
            "description": "Group for front-app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c1372afefa42f00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ecommerce-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:security-group/sg-070d9b7ce02907d4e",
            "description": "Group for grafana",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070d9b7ce02907d4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "grafana-sg",
            "name_prefix": "",
            "owner_id": "741692307640",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grafana-sg"
            },
            "tags_all": {
              "Name": "grafana-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-023593f2a5ebec035",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023593f2a5ebec035",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-1"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-1"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-088c8ea0baa391b7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088c8ea0baa391b7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-2"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-2"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0868cfbe803aed948",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0868cfbe803aed948",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-priv-3"
            },
            "tags_all": {
              "Name": "ecommerce-project-priv-3"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-001796c1d2996166e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001796c1d2996166e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-1"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-1"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0e0fb01a90ccfca2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0fb01a90ccfca2e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-2"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-2"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecommerce-project-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:subnet/subnet-0389d48095e65cba2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0389d48095e65cba2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "741692307640",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecommerce-project-pub-3"
            },
            "tags_all": {
              "Name": "ecommerce-project-pub-3"
            },
            "vpc_id": "vpc-00e2d6587ebeddcbe"
          },
          "dependencies": [
            "aws_vpc.ecommerce-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecommerce-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:741692307640:vpc/vpc-00e2d6587ebeddcbe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aeb6b63dfbb1fcdd",
            "default_route_table_id": "rtb-053fa041b6dfb79d0",
            "default_security_group_id": "sg-04618afb95a0f25f2",
            "dhcp_options_id": "dopt-016e4d399c8ee8c92",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e2d6587ebeddcbe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053fa041b6dfb79d0",
            "owner_id": "741692307640",
            "tags": {
              "Name": "ecommerce"
            },
            "tags_all": {
              "Name": "ecommerce"
            }
          }
        }
      ]
    }
  ]
}